--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,9 +9,9 @@
   <meta name="author" content="">
   <title>My Stuff</title>
   <!-- Bootstrap core CSS-->
-  <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet">
   <!-- Custom fonts for this template-->
-  <link rel='stylesheet prefetch' href='http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css'>
+  <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css'>
 </head>
 <body>
   <div class="main-body-wrapper">
